# tp-labs_2022

./: .gitignore
.github/workflows/: lab04.yml  lab04_hw.yml
homework/lab02/: README.md  hello_world.cpp
homework/lab03/: .gitignore
homework/lab03/formatter_ex_lib/: main2.cpp
homework/lab03/formatter_lib/: main1.cpp
homework/lab03/hello_world_application/: CMakeLists.txt
homework/lab03/solver_application/: CMakeLists.txt
homework/lab04/formatter_ex_lib/: CMakeLists.txt
homework/lab04/formatter_lib/: CMakeLists.txt
projects/lab02/: hello_world.cpp
reports/lab01/: REPORT.md
reports/lab02/: REPORT.md
reports/lab03/: REPORT.md
